Pass some options to avoid warnings during startup